--- a/module1/hw1.rmd
+++ b/module1/hw1.rmd
@@ -1,9 +1,18 @@
 ---
 title: "R Notebook"
+author: "Gabriel Campos"
+date: "`r format(Sys.Date(), '%B %d %Y')`"
 output:
   html_document: default
   html_notebook: default
 ---
+
+```{r, message=FALSE}
+# additional libraries added
+library(ggplot2)
+library(dplyr)
+```
+
 
 **Principles of Data Visualization and Introduction to ggplot2**
 
@@ -33,17 +42,34 @@ Think a bit on what these summaries mean. Use the space below to add some more r
 ```{r}
 
 # Insert your code here, create more chunks as necessary
-
+glimpse(inc)
 ```
 
 ## Question 1
 
 Create a graph that shows the distribution of companies in the dataset by State (ie how many are in each state). There are a lot of States, so consider which axis you should use. This visualization is ultimately going to be consumed on a 'portrait' oriented screen (ie taller than wide), which should further guide your layout choices.
 
-```{r}
+```{r, echo=FALSE, results='hide'}
+# Note: not needed but verified that a company's name did not appear more than once by state
+(inc%>%
+     count(State,Name)%>%
+        filter(n>1))
+```
 
+
+
+```{r, out.height="200%",fig.height=9}
 # Answer Question 1 here
-
+inc %>% 
+	group_by(State) %>% 
+	  summarise(count = n())%>%
+      ggplot(aes(x=reorder(State,-count),y=count))+
+        geom_bar(stat="identity",width =.9)+coord_flip()+
+          geom_text(aes(label = count),
+                    vjust = .5, hjust = -.5,
+                    size = 3, color="black")+
+            xlab("States")+
+              ylab("# of Companies")
 ```
 
 ## Quesiton 2
@@ -51,9 +77,37 @@ Create a graph that shows the distribution of companies in the dataset by State 
 Lets dig in on the state with the 3rd most companies in the data set. Imagine you work for the state and are interested in how many people are employed by companies in different industries. Create a plot that shows the average and/or median employment by industry for companies in this state (only use cases with full data, use R's `complete.cases()` function.) In addition to this, your graph should show how variable the ranges are, and you should deal with outliers.
 
 ```{r}
+#inc[complete.cases(inc),]%>%
+#    filter(State=="NY")%>%
+#      group_by(Industry) %>% 
+#	      summarise(median_emp = round(mean(Employees)))
 
+```
+
+
+```{r, fig.height=6, fig.width=11}
 # Answer Question 2 here
 
+df_median_emp<-inc[complete.cases(inc),]%>%
+      filter(State=="NY")%>%
+        group_by(Industry) %>% 
+	        summarise(median_emp = round(mean(Employees)))
+      
+
+inc[complete.cases(inc),]%>%
+  filter(State=="NY")%>%
+    select(Industry,Employees)%>%
+        ggplot(aes(x=Industry,y=Employees))+
+          geom_boxplot()+
+            coord_cartesian(ylim = c(0,1000))+
+              theme(axis.text.x=element_text(angle=55,hjust=1))
+# Could not resolve alignment for labels.
+#              +
+#                geom_text(data=df_median_emp,aes(x= Industry,
+#                              y = median_emp,
+#                              label =median_emp), 
+#                         position = position_dodge(width = 0.8),
+#                          size = 3, vjust = 0,hjust=0)
 ```
 
 ## Question 3
@@ -63,6 +117,21 @@ Now imagine you work for an investor and want to see which industries generate t
 ```{r}
 
 # Answer Question 3 here
+
+inc[complete.cases(inc),]%>%
+      filter(State=="NY")%>%
+        group_by(Industry) %>% 
+	        summarise(total_rev=sum(Revenue),
+	                  total_emp=sum(Employees),
+	                  rev_per_emp=total_rev/total_emp)%>%
+            ggplot(aes(x=reorder(Industry,-rev_per_emp),y=rev_per_emp))+
+              geom_bar(stat="Identity")+
+                coord_flip()+
+                  geom_text(aes(label = round(rev_per_emp)),
+                    vjust = .5, hjust = 1.2,
+                    size = 3, color="white")+
+                      xlab("Industry")+
+                        ylab("Revenue Per Employee")
 
 ```
 
